[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/GraphicNodes/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/GraphicNodes/gal_s.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/GraphicNodes/RPS_UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Galina.gd" type="Script" id=4]
[ext_resource path="res://assets/images/Clothes/gal_cloth1.png" type="Texture" id=5]
[ext_resource path="res://assets/images/Clothes/gal_cloth5.png" type="Texture" id=6]
[ext_resource path="res://assets/images/Clothes/gal_cloth2.png" type="Texture" id=7]
[ext_resource path="res://assets/images/Clothes/gal_cloth3.png" type="Texture" id=8]
[ext_resource path="res://assets/images/Clothes/gal_cloth4.png" type="Texture" id=9]

[node name="Galina" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="gal_s" parent="." instance=ExtResource( 2 )]
position = Vector2( 640, 459 )
scale = Vector2( 0.6, 0.6 )

[node name="clothing" type="Node2D" parent="."]
scale = Vector2( 0.4, 0.4 )

[node name="GalCloth1" type="Sprite" parent="clothing"]
visible = false
position = Vector2( 2432.5, 112.5 )
texture = ExtResource( 5 )

[node name="GalCloth2" type="Sprite" parent="clothing"]
visible = false
position = Vector2( 3005, 305 )
texture = ExtResource( 7 )

[node name="GalCloth3" type="Sprite" parent="clothing"]
visible = false
position = Vector2( 2700, 245 )
texture = ExtResource( 8 )

[node name="GalCloth4" type="Sprite" parent="clothing"]
visible = false
position = Vector2( 2470, 305 )
texture = ExtResource( 9 )

[node name="GalCloth5" type="Sprite" parent="clothing"]
visible = false
position = Vector2( 2464, 465 )
texture = ExtResource( 6 )

[node name="RPS_UI" parent="." instance=ExtResource( 3 )]

[editable path="RPS_UI"]
